# gcp-workflows-cdk

./: .gitattributes  ARCHITECTURE.md  README.md  REFERENCE.md  main.py  pyproject.toml
.opencode/skills/pydantic-v2/: SKILL.md
docs/: 01_overview.md  02_steps.md  03_error_handling.md  04_control_flow.md  05_data_model.md  06_pydantic_design.md  07_test_fixtures.md
src/cloud_workflows/: __init__.py  builder.py  cli.py  consts.py  expressions.py  models.py  parser.py  retry.py  steps.py  variables.py
tests/: conftest.py  test_assign.py  test_build.py  test_builder.py  test_builder_legacy.py  test_call.py  test_cdk.py  test_cli.py  test_consts.py  test_expressions.py  test_for.py  test_integration.py  test_nested.py  test_parallel.py  test_return_raise.py  test_step_builder.py  test_switch.py  test_top_level.py  test_try.py  test_variables.py  test_workflow_builder.py  typecheck_overloads.py
tests/builder/: conftest.py  test_alias_methods.py  test_build.py  test_cdk.py  test_step_builder.py  test_workflow_builder.py
tests/fixtures/assign/: basic.yaml  empty.yaml  expressions.yaml  multi_key_dict.yaml  over_50.yaml  with_next.yaml
tests/fixtures/call/: http_get.yaml  http_post_auth.yaml  no_args.yaml  no_result.yaml  subworkflow.yaml
tests/fixtures/cdk/: alias_chained.yaml  alias_nested.yaml  alias_parallel.yaml  (+70 more)
tests/validation/: conftest.py  test_assign.py  test_call.py  test_expressions.py  test_for.py  test_integration.py  test_nested.py  test_parallel.py  test_return_raise.py  test_switch.py  test_top_level.py  test_try.py  test_variables.py
(+82 files in other folders)
